add wd tests