@@ -15,6 +15,29 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.12</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -22,7 +45,53 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.19.1</version>
+                <configuration>
+                    <argLine>
+                        -Xms256m -Xmx6g -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
+<!--                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"-->
+                    </argLine>
+                    <groups>${groups}</groups>
+                    <excludedGroups>${excluded.groups}</excludedGroups>
+                    <includes>
+                        <include>${include.packages}</include>
+                    </includes>
+                    <excludes>
+                        <exclude>${exclude.packages}</exclude>
+                    </excludes>
+<!--                    <properties>-->
+<!--                        <property>-->
+<!--                            <name>listener</name>-->
+<!--                            <value>io.qameta.allure.junit4.AllureJunit4</value>-->
+<!--                        </property>-->
+<!--                    </properties>-->
+<!--                    <systemProperties>-->
+<!--                        <property>-->
+<!--                            <name>allure.results.directory</name>-->
+<!--                            <value>${project.build.directory}/allure-results</value>-->
+<!--                        </property>-->
+<!--                        <property>-->
+<!--                            <name>allure.link.issue.pattern</name>-->
+<!--                            <value>https://st.yandex-team.ru/%s</value>-->
+<!--                        </property>-->
+<!--                    </systemProperties>-->
+
+                    <parallel>classesAndMethods</parallel>
+                    <threadCountClasses>1</threadCountClasses>
+                    <threadCountMethods>1</threadCountMethods>
+
+                    <forkCount>4C</forkCount>
+                    <reuseForks>false</reuseForks>
+
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                </configuration>
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <groupId>org.aspectj</groupId>-->
+<!--                        <artifactId>aspectjweaver</artifactId>-->
+<!--                        <version>${aspectj.version}</version>-->
+<!--                    </dependency>-->
+<!--                </dependencies>-->
             </plugin>
         </plugins>
     </build>
